tests/positive/pr113_variant_guard.safe
-- Test: pr113_variant_guard
-- Description: Character-driven variant fields guarded by if and strict case.
-- Expected: ACCEPT

package pR113_Variant_Guard

   type packet (Kind : character = 'A') is
      record
         case Kind
            when 'A'
               alpha : integer;
            when others
               beta : integer;



   sample : packet ('A') = (alpha = 1);

   function read_Alpha (p : in packet) returns integer

      if p.Kind == 'A'
         return p.alpha;

      return 0;


   function read_Alpha_With_Case (p : in packet) returns integer

      case p.Kind
         when 'A'
            return p.alpha;

         when others
            return 0;





