tests/negative/neg_pr113_variant_multi_choice.safe
package neg_PR113_Variant_Multi_Choice
   type packet (Kind : character = 'A') is
      record
         case Kind
            when 'A', 'B'
               value : integer;



